# PyGameProject

./: .gitignore  README.md  pyproject.toml
src/: config.json  main.py
src/assets/: sounds
src/game/: app.py  background.py  camera.py  settings.py
src/game/entities/: enemy.py  fireball.py  health.py  hitspark.py  player.py  projectile.py
src/game/entities/effects/: __init__.py  fireball.py  fireinbody.py  hitspark.py
src/game/scenes/: __init__.py  config_menu.py  gameplay.py  load_screen.py  main_menu.py
src/game/utils/: audio.py  config.py
tests/: test_game.py
