[tool.poetry]
name = "pygametest"
version = "0.1.0"
description = "A simple game built with Pygame."
authors = ["Júnior Veras <iramarjuniorveras10@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"