[tool.poetry]
name = "knight-demo-game"
version = "0.1.0"
description = """Knight DEMO Game

Este projeto foi desenvolvido para a disciplina "Linguagem de Programação Aplicada" da UNINTER.
Curso: Análise e Desenvolvimento de Sistemas
"""
authors = ["Júnior Veras <iramarjuniorveras10@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"